@@ -35,6 +35,10 @@ by a '#' or a '*' or a '?'. A
   resources from the display database, user file, gv system database
   and command line doing the Right Thing (TM).
 
+# gv is now able to correctly understand DocumentMedia and other DSC
+  directives. It was not possible with previous versions due to a bug
+  in the postscript names scanning routine.
+
 * Vulnerability CVE-2006-5864 has been fixed.
 
 * gs is now invoked with `-dFIXEDMEDIA'
